[package]
name = "serde-context-derive"
version = "0.1.0"
edition = "2021"
description = "Custom derive for traits from the serde-context crate"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0.215" }
